Fix Gravity Forms "Other" radio option text input not displaying
The .gfield_radio input selector was targeting all inputs, constraining
the "Other" companion text field to 1.5em x 1.5em (invisible). Changed
to input[type="radio"] and added .gchoice_other_control { width/height: auto }
to ensure the text field renders correctly.

Fixes https://github.com/proudcity/wp-proudcity/issues/2803

--- a/assets/styles/plugins/_gravity-forms.scss
+++ b/assets/styles/plugins/_gravity-forms.scss
@@ -64,7 +64,7 @@ $gform-container-margin: 20px;
     margin-bottom: 0.35em;
   }
 
-  input {
+  input[type="radio"] {
     height: 1.5em;
     width:1.5em;
     margin-left: 0.15em;
@@ -73,6 +73,11 @@ $gform-container-margin: 20px;
     &[value="gf_other_choice"] {
       margin-top: 15px;
     }
+  }
+
+  .gchoice_other_control {
+    width: auto;
+    height: auto;
   }
 }
 
